# AtariCtrl

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  submodule_cfg.yaml  submodule_install.py
assets/robots/g1/: g1_29dof_rev_1_0.xml  scene_g1_box.xml  scene_g1_box_table.xml  scene_g1_cylinder.xml
atarictrl/: __init__.py
atarictrl/config/: __init__.py  config_factory.py  config_manager.py
atarictrl/config/g1/: g1_cfg.py  g1_custom_cfg.py  g1_loco_mimic_cfg.py
atarictrl/controller/: __init__.py  base_ctrl.py  beyondmimic_ctrl.py  ctrl_cfgs.py  ctrl_manager.py  joystick_ctrl.py  keyboard_ctrl.py  motion_ctrl.py  unitree_ctrl.py
atarictrl/environment/: __init__.py  base_env.py  dummy_env.py  env_cfgs.py  mujoco_box_env.py  mujoco_env.py  unitree_cpp_env.py  unitree_env.py
atarictrl/environment/utils/: mujoco_viz.py
atarictrl/pipeline/: __init__.py  base_pipeline.py  pipeline_cfgs.py  rl_loco_mimic_pipeline.py  rl_multi_policy_pipeline.py  rl_pipeline.py
atarictrl/policy/: __init__.py  amo_policy.py  base_policy.py  beyondmimic_policy.py  beyondmimicobject_policy.py  policy_cfgs.py  smooth_policy.py  unitree_policy.py
atarictrl/tools/: debug_log.py  dof.py  kinematics.py  retarget.py  tool_cfgs.py  vicon_odometry.py  vicon_subscriber_zmq_test.py  zed_odometry.py
atarictrl/utils/: logger.py  util_func.py
docs/: controller.md  environment.md  policy.md  unitree_setup.md
scripts/: run_pipeline.py  view_beyondmimic.py  view_beyondmimicobject.py  view_log_msgpack.py  view_unitree_vicon_mujoco.py
tests/: test_full_imports.py
(+48 files in other folders)
