[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ATARICtrl"
version = "1.4.2"
description = "ATARICtrl: A plug-and-play deploy framework for robots. Just deploy, just do."
authors = [
    { name = "Atarilab", email = "shafeef.omar@tum.de" }
]
readme = "README.md"
requires-python = ">=3.11"

dynamic = ["dependencies"]

[tool.setuptools]
packages = ["atarictrl"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pre-commit==4.3.0",
    "ruff==0.12.7",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["__pycache__", ".venv", "build", "dist", "logs", "data", "atarictrl/controller/motion_lib", "atarictrl/policy/hilo", "atarictrl/policy/gmt","packages", "third_party"]
lint.select = ["E", "F", "I", "B", "UP"]
lint.ignore = ["B008"]
lint.fixable = ["ALL"]